New Homepage work

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -159,7 +159,7 @@
     &-regular, &-normal, &-reg {
         font-weight: $font-weight-regular !important;
     }
-    &--light {
+    &--light, &-light {
         font-weight: $font-weight-light !important;
     }
     &-strong, &-bold {
