--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -47,6 +47,16 @@ ruby:
   current_page.data.asset_preload = '<link href="' + 'https://images.ctfassets.net/189dvqdsjh46/22u6YIHYILt7uTqCpYCBv4/76759911c110c5111e8d1b91c2d43882/bg-masthead-pattern.svg' + '" rel="preload" as="image" /><link href="' + 'https://images.ctfassets.net/189dvqdsjh46/2zLOFwJwyhM6db1IiTPvsz/65d0aa105a70fc11aec17ffdc844ca73/network-color-grad.svg' + '" rel="preload" as="image" />'
   current_page.data.share_image = image_share_default
 
+scss:
+  .art .art-accent.lozad.loaded {
+    opacity: 0.5;
+  }
+  .lead {
+    letter-spacing: 0.03em;
+    max-width: 40em;
+    font-weight: 300;
+  }
+
 / section.bg-gray-1.container-image-fill.lozad data-background-image=bg_product_light
 section#top.bg-gray-1
   = partial "partials/head/header", :locals => { :style => "light" }
@@ -55,21 +65,25 @@ section.masthead.bg-dark.bg-gray-1.relative id="masthead"
   .section-article.relative.z-10
     .row.align-center
       .columns.small-12.large-10.xlarge-9
-        svg id="datica-logo-desktop" width="230" height="96"
-          use.symbol-icon.logo-size--large xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
-        h1.headline-1.text-light.group--2x We bring the cloud to healthcare.
+        svg.group id="datica-logo-desktop" width="230" height="96"
+          use.symbol-icon xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
+        h1.headline-1.text-light.margin-bottom-small We bring the cloud to healthcare.
         p.lead Developing healthcare applications in the cloud requires <strong>data integration and compliance</strong> with complicated rules and controls. Datica has a family of powerful, single-source solutions to those challenges.
         .row.align-center.small-up-1.medium-large-up-2
           = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_links => true }
+        .waypoint
+          h4.headline-5.spaced-out Learn More
+          a.pulse href="#case-studies" title="Learn More"
+            = inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon")
+
   .art
     /= inline_svg("network-color-grad", class: "z-5 art-accent step-2 img-mix-overlay")
     .z-0.art-bg-fill.container-image-fill.lozad.step-1 data-background-image="https://images.ctfassets.net/189dvqdsjh46/22u6YIHYILt7uTqCpYCBv4/76759911c110c5111e8d1b91c2d43882/bg-masthead-pattern.svg"
     img.z-5.art-accent.step-2.img-mix-overlay.lozad data-src="/public/icons/inlined/network-color-grad.svg"
-.strip.strip-greens
 
-section.section-article.bg-light.bg-gray-11
+section.section-article.bg-light.bg-gray-11.collection#case-studies
   = partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["cdRLk1E4TCvKRTrZ5fEdo"], :classes => "group--2x" })
-  = partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["2Gz3re06aQy8d9BiPMpdUW"], :classes => "group--2x" })
+  = partial("/partials/content/cta-section-promo", :locals => { :entry => data.site.cta["4eXHm6R7WzdKbyS8hRISbJ"], :classes => "" })
 
 
 
@@ -91,25 +105,9 @@ section.section-article.bg-light.bg-gray-11
           li
             a.text-bold.spaced-out title="Careers at Datica" href="/careers/" Careers
 
-/section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
-  .row.align-center
-    .columns.small-12.medium-10.large-6.text-center
-      h2.headline-3.text-bold.group Datica solves the tough challenges of working with patient data.
-  /.button-group.menu.align-center.group
-    = partial "partials/snippets/button", :locals => { :label => "Compliance is a risk we make go away", :url => "/cloud-compliance/", :button_classes => "button button--light button--hover-compliance no-nudge", :item_id => "get-compliance", :data_track_group => "compliance" }
-    = partial "partials/snippets/button", :locals => { :label => "EHR integration is a pain we make easy", :url => "/ehr-integration/", :button_classes => "button button--light button--hover-integration no-nudge", :item_id => "get-integration", :data_track_group => "integration" }
-  .row.align-center.group
-    .columns.small-12.medium-10.large-7.text-center
-      p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most pressing challenges.
-  .row.align-center
-    .columns.small-12.large-10
-      .row.align-center.small-up-1.medium-large-up-2
-        = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_links => true }
-
-/.strip.strip-greens-left
 
 section.section-article#compliance
-  .row.align-center.text-center
+  .row.align-center.text-center.group
     .columns.small-12.large-9
       h4.headline-4 Datica helps you comply with multiple compliance frameworks.
       .row.small-up-3.medium-up-5.align-middle.align-center.group
@@ -117,12 +115,6 @@ section.section-article#compliance
           - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
           .column
             img alt="#{logo["name"]}" class="lozad #{logopad}" data-src="#{logo["fileUrl"]}" /
-      = partial "partials/snippets/button", :locals => { :label => "Datica Compliance Story", :title => "Read more", :url => "/cloud-compliance/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "compliance-story", :data_track_group => "compliance" }
-
-/section.section-article.bg-gray-12.drop-inset--v#proof
-  h3.headline-3.text-light.text-center.group Build <strong>Breakthrough</strong> Compliant Apps
-  = partial "partials/content/video-quote"
-section.section-article.bg-white
   .row.align-center
     .columns.small-12.large-11.text-center
       h3.headline-3 <strong>World-class companies</strong> trust Datica
@@ -132,6 +124,8 @@ section.section-article.bg-white
 
 /= partial "partials/section-promos/latest-series"
 = partial "/partials/section-promos/podcast"
+section.section-article.bg-white#recent
+  = partial "partials/content/recent-items"
 section.section-article.bg-gray-12.drop-inset--v#education
   .row.align-center
     .columns.small-12.large-6
@@ -144,10 +138,7 @@ section.section-article.bg-gray-12.drop-inset--v#education
           a href=item.url title=item.title data-track-category="education" data-track-id="resources_#{item.slug}" = item.title
         p = item.desc
 
-
-section.section-article.bg-white#recent
-  = partial "partials/content/recent-items"
-
+/ .strip.strip-greens
 
 /= partial "partials/section-promos/careers", :locals => { :tagline => "Solve hard problems.<br> Live where you want. Help us transform healthcare for the better." }
 
