--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -69,7 +69,7 @@ section.masthead.bg-dark.bg-gray-1.relative id="masthead"
           use.symbol-icon xlink:href="#datica-logo-horiz" href="#datica-logo-horiz"
         h1.headline-1.text-light.margin-bottom-small We bring the cloud to healthcare.
         p.lead Developing healthcare applications in the cloud requires <strong>data integration and compliance</strong> with complicated rules and controls. Datica has a family of powerful, single-source solutions to those challenges.
-        .row.align-center.small-up-1.medium-large-up-2
+        .row.align-center.small-up-1.medium-up-2
           = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_links => true }
         .waypoint
           h4.headline-5.spaced-out Learn More
