Homepage updates, various css tweaks
hover cards are back, baby

--- a/source/assets/scss/mixins/colors.scss
+++ b/source/assets/scss/mixins/colors.scss
@@ -39,8 +39,10 @@
     color: $body-font-color;
 }
 @mixin color--white-to-gray-light {
-    background-color: $gray-11;
-    background: linear-gradient(-45deg, $white 0%, $gray-11 100%);
+    background-color: $gray-12;
+    color: black;
+    background: linear-gradient(215deg, #ced9d9 6%, #FFFFFF 68%);
+    // background: linear-gradient(-45deg, $white 0%, $gray-11 100%);
 }
 @mixin color--gray-dark {
     color: $color_white;
