--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -66,13 +66,13 @@
     &-divider {
         display: block; // overrides global-flexbox: true in settings:268. Not sure how this setting will play out (which components are flexbox-enabled? - AW)
     }
-    &--hover {
-        transition: box-shadow $timing-default * 0.7 linear;
-        // box-shadow: 0 1px 1px 0 black(0);
-        &:hover {
-            box-shadow: 0 5px 15px 0 black(0.4);
-        }
-    }
+    // &--hover {
+    //     transition: box-shadow $timing-default * 0.7 linear;
+    //     // box-shadow: 0 1px 1px 0 black(0);
+    //     &:hover {
+    //         box-shadow: 0 5px 15px 0 black(0.4);
+    //     }
+    // }
     // featured card container
     &-featured-section {
         @extend .section-article--med;
@@ -128,6 +128,34 @@
         }
     }
 }
+// inspired by https://tobiasahlin.com/blog/how-to-animate-box-shadow/ for better perf and scaling
+.card-hover {
+    position: relative;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0);
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    &::after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        opacity: 0;
+        transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    }
+
+    &:hover {
+        transform: scale3D(1.03, 1.03, 1.03);
+        &::after {
+            opacity: 1;
+        }
+    }
+}
+
+
 .card-section--with-grid { // when rows/cols are within a card-section, need to kill the padding on sides. <shrug>
     padding-left:  0;
     padding-right: 0;
